some dark mode fixes on mobile menu & added icons to menu

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,10 +59,6 @@ a:hover {
   align-self: flex-start;
 }
 
-.navbar-menu {
-  padding: 0.5em !important;
-}
-
 .name-header {
   margin-left: 8px;
 }
@@ -239,6 +235,14 @@ a:hover {
 }
 
 .dark-mode-info-text {
+  color: rgb(233, 230, 230) !important;
+}
+
+.dark-mode-menu {
+  background: #24282c !important;
+}
+
+.dark-mode-menu .item * {
   color: rgb(233, 230, 230) !important;
 }
 
